--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <title>2Do</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
-    
+    <div class="app">
+      <h1>2DO</h1>
+      <section class="form">
+        <label for="todo-input">Add to your todo list!</label>
+        <input class="todo-input "type="text" name="todo-input">
+        <button class="add-todo">ADD</button>
+        <label for="number-input">Mark a todo complete (Enter its number, please.)</label>
+        <input class="number-input "type="text" name="number-input">
+        <button class="mark-todo-complete">MARK COMPLETE</button>
+        <hr>
+        <button class="delete-completed-todos">DELETE COMPLETED</button>
+      </section>
+      <ol class="todo-list"></ol>
+    </div>
     <script src="./main.js"></script>
   </body>
 </html>
